--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,2 +1,4 @@
 .row-fluid
-  .h1 Home
+  %h1.hu Welcome to the Gotcha Deathquiz of Madness and Pain
+  %p
+    = link_to 'Quiz', 'quiz/start', class: 'public-btn grn-btn'
