some new styling

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -20,7 +20,8 @@
             -# = f.label :selection, "#{answer.selection4}"
             -# = f.radio_button "selection#{answer.id}", "#{answer.selection4}"
             -# %br
-        %button.primary Finished
+        = button_to("Finished", class: "btn btn-primary")
+        
         
       
 
