--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -1,18 +1,15 @@
-.row-fluid
-  .h1 
-    Quiz
-    .h5
-      = form_for :questions, url: quiz_path do |f|
-        - @answers.each do |answer|
-          %br
-          = f.label :content, "#{answer.id}) #{answer.question}"
-          %br
-          - (1..4).each do |number|
-            = f.radio_button answer.id, answer.selections[number]
-            = f.label :answer, answer.selections[number]
+.span4
+  .row-fluid
+    .h1 
+      Quiz
+      .h5
+        = form_for :questions, url: quiz_path do |f|
+          - @answers.each do |answer|
             %br
-        = button_to("Finished", class: "submit")
-        
-        
-      
-
+            = f.label :content, "#{answer.id}) #{answer.question}"
+            %br
+            - (1..4).each do |number|
+              = f.radio_button answer.id, answer.selections[number]
+              = f.label :answer, answer.selections[number]
+              %br
+          = button_to("Finished", class: "submit")
